python/testData/inspections/AddToImportFromList.py
from AddToImportFromFoo import bar

<caret><error descr="Unresolved reference 'add_to_import_test_unique_name'">add_to_import_test_unique_name</error> # must get imported
